2014-09-28  Diego Pino Garcia  <dpino@igalia.com>

        Simple ES6 feature: Number constructor extras
        https://bugs.webkit.org/show_bug.cgi?id=131707

        Reviewed by Darin Adler.

        * runtime/CommonIdentifiers.h:
        * runtime/NumberConstructor.cpp:
        (JSC::NumberConstructor::finishCreation): Setup constants and
        functions.
        (JSC::numberConstructorFuncIsFinite): Added.
        (JSC::numberConstructorFuncIsInteger): Added.
        (JSC::numberConstructorFuncIsNaN): Added.
        (JSC::numberConstructorFuncIsSafeInteger): Added.
        (JSC::NumberConstructor::getOwnPropertySlot): Deleted.
        (JSC::numberConstructorNaNValue): Deleted.
        (JSC::numberConstructorNegInfinity): Deleted.
        (JSC::numberConstructorPosInfinity): Deleted.
        (JSC::numberConstructorMaxValue): Deleted.
        (JSC::numberConstructorMinValue): Deleted.
        * runtime/NumberConstructor.h:

2014-09-26  Filip Pizlo  <fpizlo@apple.com>

        Disable function.arguments
        https://bugs.webkit.org/show_bug.cgi?id=137167

        Rubber stamped by Geoffrey Garen.
        
        Add an option to disable function.arguments. Add a test for disabling it.
        
        Disabling function.arguments means that it returns an Arguments object that claims that
        there were zero arguments. All other Arguments functionality still works, so any code
        that tries to inspect this object will still think that it is looking at a perfectly
        valid Arguments object.
        
        This also makes function.arguments disabled by default. Note that the RJST harness will
        enable them by default, to continue to get test coverage for the code that implements
        the feature.
        
        We will rip out that code once we're confident that it's really safe to remove this
        feature. Only once we rip out that support will we be able to do optimizations to