@@ -118,11 +118,7 @@
     macro(input) \
     macro(instructionCount) \
     macro(isArray) \
-    macro(isFinite) \
-    macro(isInteger) \
-    macro(isNaN) \
     macro(isPrototypeOf) \
-    macro(isSafeInteger) \
     macro(isView) \
     macro(isWatchpoint) \
     macro(jettisonReason) \
@@ -144,8 +140,6 @@
     macro(osrExitSites) \
     macro(osrExits) \
     macro(parse) \
-    macro(parseFloat) \
-    macro(parseInt) \
     macro(postMessage) \
     macro(profiledBytecodes) \
     macro(propertyIsEnumerable) \
